--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="koala.weibo">
+    package="koala.weibo" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".support.utils.GlobalContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".AccountActivity"
+            android:name=".ui.login.AccountActivity"
             android:label="@string/app_name"
-            android:uiOptions="splitActionBarWhenNarrow">
+            android:uiOptions="splitActionBarWhenNarrow" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +21,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".OauthActivity"
-            android:label="@string/oauth_title"></activity>
+            android:name=".ui.login.OauthActivity"
+            android:label="@string/oauth_title" />
+        <activity
+            android:name=".ui.main.MainTimeLineActivity"
+            android:label="@string/title_activity_main_time_line" >
+        </activity>
     </application>
 
 </manifest>
